@@ -6,6 +6,10 @@ Changelog for atreal.filecart
 1.1rc2 (unreleased)
 -------------------
 
+- Don't crash the cart if an additional attachment was removed after the item
+  was put in the cart. Mark the attachment as deleted.
+  [vincentfretin]
+
 - Don't create session if not needed.
   [vincentfretin]
 
